--- a/src/menupage.html
+++ b/src/menupage.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Egg Timer</title>
-        <link rel="stylesheet" href="./menu.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <audio id="click-sound" src="./assets/sounds/click.mp3" preload="auto"></audio>
@@ -15,7 +15,7 @@
         </div>
         <div class="content-container">
             <img src="./assets/background.png" alt="background" class="background-img" />
-            <h1 class="line">What are you making today?</h1>
+            <h1 class="liner">What are you making today?</h1>
             <div class="eggs-container">
                 <div class="egg-item">
                     <button id="hard-boiled-button">
