--- a/src/startpage.html
+++ b/src/startpage.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Egg Timer</title>
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="startpage.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <audio id="click-sound" src="./assets/sounds/click.mp3" preload="auto"></audio>
@@ -22,9 +22,34 @@
     <button id="start-button">Start</button>
     <p class="slogan">Eggactly on time</p>
   </div>
-<a href="endingpage.html">Go to Done Page</a>
 
 
-  <script src="script.js"></script>
+
+  <script>
+const { ipcRenderer } = require('electron');
+
+const clickSound = document.getElementById('click-sound');
+
+function playClickSound() {
+    clickSound.currentTime = 0;
+    clickSound.play();
+}
+
+document.getElementById('close-icon').addEventListener('click', () => {
+    playClickSound();
+    ipcRenderer.send('close-app');
+});
+
+document.getElementById('minimise-icon').addEventListener('click', () => {
+    playClickSound();
+    ipcRenderer.send('minimise-window');
+});
+
+// Go to menu page
+document.getElementById("start-button").addEventListener("click", () => {
+    playClickSound();
+    ipcRenderer.send("go-to-menu-page");
+})
+</script>
 </body>
 </html>
